secure_self_service/policies/tenant-cluster/unsigned/require-signed-policies.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: validate-manifests
spec:
  validationFailureAction: enforce
  rules:
    - name: require-signed-policies
      match:
        any:
        - resources:
            kinds:
              - ClusterPolicy
              - Policy
      validate:
        manifests:
          attestors:
          - entries:
            - keys:
                publicKeys: |-
                  -----BEGIN PUBLIC KEY-----
                  MFkwEwYHKoZIzj0CAQYIKoZIzj0DAQcDQgAEyBg8yod24/wIcc5QqlVLtCfL+6Te
[...]
                  -----END PUBLIC KEY-----
